crates/vox-compiler/tests/snapshots/golden_dashboard_surfaces_test__forge_surface_stub_tsx_dashboard_surface.snap
---
source: crates/vox-compiler/tests/golden_dashboard_surfaces_test.rs
assertion_line: 223
expression: ts
---
import React, { useState } from "react";

import { SurfaceStub } from "./SurfaceStub";

export function ForgeSurface(): React.ReactElement {
  const [panel, set_panel] = useState("pipeline");
  return (
<column flex={1} overflow={"hidden"} bg={"zinc.950"}
>
  <row h={10} border_b={true} border_color={"zinc.800"} pad_x={4} items={"center"} gap={4} shrink={0}
>
  <text size={"sm"} weight={"black"} tracking={"tight"} color={"white"}
>
  {"Forge"}
</text>
  <row gap={1}
>
  <button raw_class={(panel === "pipeline" ? "px-3 py-1 rounded-lg bg-white/8 text-xs text-white font-medium" : "px-3 py-1 rounded-lg text-xs text-zinc-500 hover:text-zinc-300")} onClick={(() => ((() => {
    set_panel("pipeline");
  })()))}
>
  {"Pipeline"}
</button>
  <button raw_class={(panel === "timeline" ? "px-3 py-1 rounded-lg bg-white/8 text-xs text-white font-medium" : "px-3 py-1 rounded-lg text-xs text-zinc-500 hover:text-zinc-300")} onClick={(() => ((() => {
    set_panel("timeline");
  })()))}
>
  {"Time Travel"}
</button>
</row>
</row>
  {(panel === "pipeline" ? <SurfaceStub title={"Pipeline"} desc={"Lex to Codegen. Each stage shows duration, status, and diagnostics."} action={"Run build"} /> : <SurfaceStub title={"Time Travel"} desc={"Scrub the workflow event timeline to inspect durable state at any past instant."} action={"Load a workflow"} />)}
</column>
  );
}
