crates/vox-compiler/tests/snapshots/golden_dashboard_surfaces_test__runs_surface_stub_tsx_dashboard_surface.snap
---
source: crates/vox-compiler/tests/golden_dashboard_surfaces_test.rs
assertion_line: 254
expression: ts
---
import React from "react";

import { SurfaceStub } from "./SurfaceStub";

export function RunsSurface(): React.ReactElement {
  return (
    <div className={["flex", "flex-col", "flex-1", "overflow-hidden", "bg-zinc-950"].filter(Boolean).join(" ")}>
      <div className={["flex", "flex-row", "h-10", "border-b", "border-zinc-800", "px-4", "items-center", "justify-between", "shrink-0"].filter(Boolean).join(" ")}>
        <p className={["text-sm", "tracking-tight", "text-white"].filter(Boolean).join(" ")}>
          {"Runs"}
        </p>
        <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2", "px-3 py-1 rounded-lg bg-zinc-900 border border-white/10 text-xs text-zinc-400 hover:bg-zinc-800"].filter(Boolean).join(" ")}>
          {"Live tail: off"}
        </button>
      </div>
      <SurfaceStub action={"Start a run"} desc={"Persistent log of every orchestrator run. Click a row to see the full event tree."} title={"Runs"} />
    </div>
  );
}
