crates/vox-compiler/tests/snapshots/golden_dashboard_surfaces_test__settings_surface_stub_tsx_dashboard_surface.snap
---
source: crates/vox-compiler/tests/golden_dashboard_surfaces_test.rs
assertion_line: 346
expression: ts
---
import React from "react";

import { SurfaceStub } from "./SurfaceStub";

export function SettingsSurface(): React.ReactElement {
  return (
<column flex={1} overflow={"hidden"} bg={"zinc.950"}
>
  <row h={10} border_b={true} border_color={"zinc.800"} pad_x={4} items={"center"} shrink={0}
>
  <text size={"sm"} weight={"black"} tracking={"tight"} color={"white"}
>
  {"Settings"}
</text>
</row>
  <SurfaceStub title={"Settings"} desc={"Identity and API tokens, workspace paths, budget caps, telemetry, and appearance."} action={"Configure identity"} />
</column>
  );
}
