crates/vox-compiler/tests/snapshots/golden_dashboard_surfaces_test__speak_surface_stub_tsx_dashboard_surface.snap
---
source: crates/vox-compiler/tests/golden_dashboard_surfaces_test.rs
assertion_line: 170
expression: ts
---
import React from "react";

import { StateChip } from "./StateChip";
import { SurfaceStub } from "./SurfaceStub";

export function SpeakSurface(): React.ReactElement {
  return (
<column flex={1} overflow={"hidden"} bg={"zinc.950"}
>
  <row h={10} border_b={true} border_color={"zinc.800"} pad_x={4} items={"center"} justify={"between"} shrink={0}
>
  <text size={"sm"} weight={"black"} tracking={"tight"} color={"white"}
>
  {"Speak"}
</text>
  <StateChip status={"idle"} label={"no session"} />
</row>
  <SurfaceStub title={"Speak"} desc={"Chat with the mesh. Tool calls render as collapsible cards."} action={"Start a conversation"} />
</column>
  );
}
