crates/vox-compiler/tests/snapshots/golden_dashboard_surfaces_test__surface_stub_tsx_dashboard_surface.snap
---
source: crates/vox-compiler/tests/golden_dashboard_surfaces_test.rs
assertion_line: 88
expression: ts
---
import React from "react";

export interface SurfaceStubProps {
  title: string;
  desc: string;
  action: string;
}

export function SurfaceStub({ title, desc, action }: SurfaceStubProps): React.ReactElement {
  return (
    <div className={["flex", "flex-col", "flex-1", "items-center", "justify-center", "gap-4", "text-zinc-500", "p-8"].filter(Boolean).join(" ")}>
      <div className={["flex", "flex-col", "w-full", "gap-2", "max-w-md opacity-20 pointer-events-none mb-4"].filter(Boolean).join(" ")}>
        <div className={["flex", "flex-row", "gap-2"].filter(Boolean).join(" ")}>
          <div className={["border", "border-border", "p-4", "flex-1", "h-8", "bg-zinc-800", "rounded-lg"].filter(Boolean).join(" ")} role={"region"} />
          <div className={["border", "border-border", "p-4", "w-20", "h-8", "bg-zinc-800", "rounded-lg"].filter(Boolean).join(" ")} role={"region"} />
        </div>
        <div className={["border", "border-border", "p-4", "w-full", "h-24", "bg-zinc-800", "rounded-lg"].filter(Boolean).join(" ")} role={"region"} />
        <div className={["flex", "flex-row", "gap-2"].filter(Boolean).join(" ")}>
          <div className={["border", "border-border", "p-4", "flex-1", "h-6", "bg-zinc-800", "rounded-lg"].filter(Boolean).join(" ")} role={"region"} />
          <div className={["border", "border-border", "p-4", "flex-1", "h-6", "bg-zinc-800", "rounded-lg"].filter(Boolean).join(" ")} role={"region"} />
          <div className={["border", "border-border", "p-4", "flex-1", "h-6", "bg-zinc-800", "rounded-lg"].filter(Boolean).join(" ")} role={"region"} />
        </div>
      </div>
      <p className={["text-sm", "font-bold", "uppercase", "tracking-widest", "text-zinc-400"].filter(Boolean).join(" ")}>
        {title}
      </p>
      <p className={["text-xs", "text-zinc-600", "text-center max-w-xs"].filter(Boolean).join(" ")}>
        {desc}
      </p>
      <div className={["flex", "flex-row", "gap-3", "mt-2"].filter(Boolean).join(" ")}>
        <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2", "px-4 py-2 rounded-lg bg-blue-600 text-white text-xs font-bold hover:bg-blue-500 transition-colors"].filter(Boolean).join(" ")}>
          {action}
        </button>
        <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2", "px-4 py-2 rounded-lg bg-zinc-900 border border-white/10 text-xs text-zinc-400 hover:bg-zinc-800 transition-colors"].filter(Boolean).join(" ")}>
          {"Load example"}
        </button>
      </div>
    </div>
  );
}
